Lead flow